# Vampire-Surveyors-

./: CMakeLists.txt  README.md
builds/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Vampire-Survivors.sln  Vampire-Survivors.vcxproj  Vampire-Survivors.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
builds/Vampire-Survivors.dir/Debug/: Vampire-Survivors.exe.recipe  Vampire-Survivors.ilk
builds/Vampire-Survivors.dir/Debug/Vampire-.0519191B.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  Vampire-Survivors.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
builds/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
builds/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.write.1.tlog
builds/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
builds/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
include/: Animator.h  Camera.h  Gamble.h  GameObject.h  Player.h  Scene.h  UI.h  jml.h
libs/: libSDL3.dylib  libSDL3_image.dylib
src/: jml.cpp  main.cpp  run.sh
